// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binding object: <div v-t="{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t(_ctx.foo.bar.buz, { name: 'banana' }, { locale: _ctx.locale, plural: 2 })), 1 /* TEXT */))
}"
`;

exports[`binding object: <div v-t="{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(_ctx.foo.bar.buz, { name: 'banana' }, { locale: _ctx.locale, plural: 2 })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 78,
                    "line": 1,
                    "offset": 77,
                  },
                  "source": "v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(_ctx.foo.bar.buz, { name: 'banana' }, { locale: _ctx.locale, plural: 2 })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 78,
                    "line": 1,
                    "offset": 77,
                  },
                  "source": "v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 80,
            "line": 1,
            "offset": 79,
          },
          "source": "<div v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 80,
          "line": 1,
          "offset": 79,
        },
        "source": "<div v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "children": Array [
              "{ path: ",
              Object {
                "content": "_ctx.foo",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 22,
                    "line": 1,
                    "offset": 21,
                  },
                  "source": "foo",
                  "start": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                },
                "type": 4,
              },
              ".",
              Object {
                "content": "bar",
                "isConstant": true,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 26,
                    "line": 1,
                    "offset": 25,
                  },
                  "source": "bar",
                  "start": Object {
                    "column": 23,
                    "line": 1,
                    "offset": 22,
                  },
                },
                "type": 4,
              },
              ".",
              Object {
                "content": "buz",
                "isConstant": true,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 30,
                    "line": 1,
                    "offset": 29,
                  },
                  "source": "buz",
                  "start": Object {
                    "column": 27,
                    "line": 1,
                    "offset": 26,
                  },
                },
                "type": 4,
              },
              ", locale: ",
              Object {
                "content": "_ctx.locale",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 38,
                    "line": 1,
                    "offset": 37,
                  },
                  "source": "locale",
                  "start": Object {
                    "column": 32,
                    "line": 1,
                    "offset": 31,
                  },
                },
                "type": 4,
              },
              ", plural: 2, args: { name: 'banana' } }",
            ],
            "identifiers": Array [],
            "loc": Object {
              "end": Object {
                "column": 77,
                "line": 1,
                "offset": 76,
              },
              "source": "{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 8,
          },
          "loc": Object {
            "end": Object {
              "column": 78,
              "line": 1,
              "offset": 77,
            },
            "source": "v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t(_ctx.foo.bar.buz, { name: 'banana' }, { locale: _ctx.locale, plural: 2 })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 78,
                "line": 1,
                "offset": 77,
              },
              "source": "v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 80,
        "line": 1,
        "offset": 79,
      },
      "source": "<div v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 80,
      "line": 1,
      "offset": 79,
    },
    "source": "<div v-t=\\"{ path: foo.bar.buz, locale, plural: 2, args: { name: 'banana' } }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`binding simple variable: <div v-t="hello"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t(_ctx.hello, {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`binding simple variable: <div v-t="hello"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(_ctx.hello, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 17,
                    "line": 1,
                    "offset": 16,
                  },
                  "source": "v-t=\\"hello\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(_ctx.hello, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 17,
                    "line": 1,
                    "offset": 16,
                  },
                  "source": "v-t=\\"hello\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
          "source": "<div v-t=\\"hello\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 1,
          "offset": 18,
        },
        "source": "<div v-t=\\"hello\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "_ctx.hello",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "source": "hello",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "source": "v-t=\\"hello\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t(_ctx.hello, {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 17,
                "line": 1,
                "offset": 16,
              },
              "source": "v-t=\\"hello\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "source": "<div v-t=\\"hello\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "source": "<div v-t=\\"hello\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`hoistStatic option: on: <div v-t="'hello'"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t('hello', {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`hoistStatic option: on: <div v-t="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": "<div v-t=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": "<div v-t=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "'hello'",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "source": "'hello'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "v-t=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t('hello', {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "source": "v-t=\\"'hello'\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "<div v-t=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "<div v-t=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`invalid expression: <p v-t="[0]"></p> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"p\\", null, _toDisplayString(_ctx.t(, {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`invalid expression: <p v-t="[0]"></p> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 13,
                    "line": 1,
                    "offset": 12,
                  },
                  "source": "v-t=\\"[0]\\"",
                  "start": Object {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 13,
                    "line": 1,
                    "offset": 12,
                  },
                  "source": "v-t=\\"[0]\\"",
                  "start": Object {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "source": "<p v-t=\\"[0]\\"></p>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"p\\"",
        "type": 13,
      },
      "isSelfClosing": false,
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "source": "<p v-t=\\"[0]\\"></p>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "[0]",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
              "source": "[0]",
              "start": Object {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "source": "v-t=\\"[0]\\"",
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "p",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t(, {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "source": "v-t=\\"[0]\\"",
              "start": Object {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "source": "<p v-t=\\"[0]\\"></p>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"p\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": "<p v-t=\\"[0]\\"></p>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`legacy path, locale, named: <div v-t="{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.$t('dessert', 'ja', { name: 'kazupon' })), 1 /* TEXT */))
}"
`;

exports[`legacy path, locale, named: <div v-t="{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$t('dessert', 'ja', { name: 'kazupon' })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 72,
                    "line": 1,
                    "offset": 71,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$t('dessert', 'ja', { name: 'kazupon' })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 72,
                    "line": 1,
                    "offset": 71,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 74,
            "line": 1,
            "offset": 73,
          },
          "source": "<div v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 74,
          "line": 1,
          "offset": 73,
        },
        "source": "<div v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 71,
                "line": 1,
                "offset": 70,
              },
              "source": "{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 72,
              "line": 1,
              "offset": 71,
            },
            "source": "v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.$t('dessert', 'ja', { name: 'kazupon' })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 72,
                "line": 1,
                "offset": 71,
              },
              "source": "v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 74,
        "line": 1,
        "offset": 73,
      },
      "source": "<div v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 74,
      "line": 1,
      "offset": 73,
    },
    "source": "<div v-t=\\"{ path: 'dessert', locale: 'ja', args: { name: 'kazupon' } }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`legacy path, plural, locale: <div v-t="{ path: 'dessert', locale: 'en', choice: 2 }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.$tc('dessert', 2, 'en')), 1 /* TEXT */))
}"
`;

exports[`legacy path, plural, locale: <div v-t="{ path: 'dessert', locale: 'en', choice: 2 }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, 'en')",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 56,
                    "line": 1,
                    "offset": 55,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, 'en')",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 56,
                    "line": 1,
                    "offset": 55,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 58,
            "line": 1,
            "offset": 57,
          },
          "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 58,
          "line": 1,
          "offset": 57,
        },
        "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "{ path: 'dessert', locale: 'en', choice: 2 }",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 55,
                "line": 1,
                "offset": 54,
              },
              "source": "{ path: 'dessert', locale: 'en', choice: 2 }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 56,
              "line": 1,
              "offset": 55,
            },
            "source": "v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.$tc('dessert', 2, 'en')",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 56,
                "line": 1,
                "offset": 55,
              },
              "source": "v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 58,
        "line": 1,
        "offset": 57,
      },
      "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 58,
      "line": 1,
      "offset": 57,
    },
    "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', choice: 2 }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`legacy path, plural, named: <div v-t="{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.$tc('dessert', 2, { name: 'kazupon' })), 1 /* TEXT */))
}"
`;

exports[`legacy path, plural, named: <div v-t="{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, { name: 'kazupon' })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 69,
                    "line": 1,
                    "offset": 68,
                  },
                  "source": "v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, { name: 'kazupon' })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 69,
                    "line": 1,
                    "offset": 68,
                  },
                  "source": "v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 71,
            "line": 1,
            "offset": 70,
          },
          "source": "<div v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 71,
          "line": 1,
          "offset": 70,
        },
        "source": "<div v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 68,
                "line": 1,
                "offset": 67,
              },
              "source": "{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 69,
              "line": 1,
              "offset": 68,
            },
            "source": "v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.$tc('dessert', 2, { name: 'kazupon' })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 69,
                "line": 1,
                "offset": 68,
              },
              "source": "v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 71,
        "line": 1,
        "offset": 70,
      },
      "source": "<div v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 71,
      "line": 1,
      "offset": 70,
    },
    "source": "<div v-t=\\"{ path: 'dessert', choice: 2, args: { name: 'kazupon' } }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`legacy path, plural: <div v-t="{ path: 'dessert', choice: 2 }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.$tc('dessert', 2, {  })), 1 /* TEXT */))
}"
`;

exports[`legacy path, plural: <div v-t="{ path: 'dessert', choice: 2 }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 42,
                    "line": 1,
                    "offset": 41,
                  },
                  "source": "v-t=\\"{ path: 'dessert', choice: 2 }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$tc('dessert', 2, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 42,
                    "line": 1,
                    "offset": 41,
                  },
                  "source": "v-t=\\"{ path: 'dessert', choice: 2 }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 44,
            "line": 1,
            "offset": 43,
          },
          "source": "<div v-t=\\"{ path: 'dessert', choice: 2 }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 44,
          "line": 1,
          "offset": 43,
        },
        "source": "<div v-t=\\"{ path: 'dessert', choice: 2 }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "{ path: 'dessert', choice: 2 }",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 41,
                "line": 1,
                "offset": 40,
              },
              "source": "{ path: 'dessert', choice: 2 }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 42,
              "line": 1,
              "offset": 41,
            },
            "source": "v-t=\\"{ path: 'dessert', choice: 2 }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.$tc('dessert', 2, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 42,
                "line": 1,
                "offset": 41,
              },
              "source": "v-t=\\"{ path: 'dessert', choice: 2 }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 44,
        "line": 1,
        "offset": 43,
      },
      "source": "<div v-t=\\"{ path: 'dessert', choice: 2 }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 44,
      "line": 1,
      "offset": 43,
    },
    "source": "<div v-t=\\"{ path: 'dessert', choice: 2 }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`legacy path: <div v-t="'hello'"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.$t('hello', {  })), 1 /* TEXT */))
}"
`;

exports[`legacy path: <div v-t="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$t('hello', {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.$t('hello', {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": "<div v-t=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": "<div v-t=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "'hello'",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "source": "'hello'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "v-t=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.$t('hello', {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "source": "v-t=\\"'hello'\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "<div v-t=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "<div v-t=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`literal object: path, locale, args, plural: <div v-t="{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t('dessert', { name: 'banana' }, { locale: 'en', plural: 2 })), 1 /* TEXT */))
}"
`;

exports[`literal object: path, locale, args, plural: <div v-t="{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('dessert', { name: 'banana' }, { locale: 'en', plural: 2 })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 82,
                    "line": 1,
                    "offset": 81,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('dessert', { name: 'banana' }, { locale: 'en', plural: 2 })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 82,
                    "line": 1,
                    "offset": 81,
                  },
                  "source": "v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 84,
            "line": 1,
            "offset": 83,
          },
          "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 84,
          "line": 1,
          "offset": 83,
        },
        "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 81,
                "line": 1,
                "offset": 80,
              },
              "source": "{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 82,
              "line": 1,
              "offset": 81,
            },
            "source": "v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t('dessert', { name: 'banana' }, { locale: 'en', plural: 2 })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 82,
                "line": 1,
                "offset": 81,
              },
              "source": "v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 84,
        "line": 1,
        "offset": 83,
      },
      "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 84,
      "line": 1,
      "offset": 83,
    },
    "source": "<div v-t=\\"{ path: 'dessert', locale: 'en', plural: 2, args: { name: 'banana' } }\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`literal path: <div v-t="'hello'"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t('hello', {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`literal path: <div v-t="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": "<div v-t=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": "<div v-t=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "'hello'",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "source": "'hello'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "v-t=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t('hello', {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "source": "v-t=\\"'hello'\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "<div v-t=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "<div v-t=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`no specify: <div v-t=""/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t(, {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`no specify: <div v-t=""/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 12,
                    "line": 1,
                    "offset": 11,
                  },
                  "source": "v-t=\\"\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t(, {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 12,
                    "line": 1,
                    "offset": 11,
                  },
                  "source": "v-t=\\"\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "source": "<div v-t=\\"\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "source": "<div v-t=\\"\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "source": "",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "source": "v-t=\\"\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t(, {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
              "source": "v-t=\\"\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "source": "<div v-t=\\"\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "<div v-t=\\"\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`prefixIdentifiers option: off: <div v-t="'hello'"/> 1`] = `
"const _Vue = Vue

return function render(_ctx, _cache) {
  with (_ctx) {
    const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = _Vue

    return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(t('hello', {  }, {  })), 1 /* TEXT */))
  }
}"
`;

exports[`prefixIdentifiers option: off: <div v-t="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 19,
                    "line": 1,
                    "offset": 18,
                  },
                  "source": "v-t=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": "<div v-t=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": "<div v-t=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "'hello'",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
              "source": "'hello'",
              "start": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
              "offset": 18,
            },
            "source": "v-t=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "t('hello', {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 1,
                "offset": 18,
              },
              "source": "v-t=\\"'hello'\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": "<div v-t=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": "<div v-t=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;

exports[`preserve modifier: <div v-t.preserve="'hello'"/> 1`] = `
"const { toDisplayString: _toDisplayString, createVNode: _createVNode, openBlock: _openBlock, createBlock: _createBlock } = Vue

return function render(_ctx, _cache) {
  return (_openBlock(), _createBlock(\\"div\\", null, _toDisplayString(_ctx.t('hello', {  }, {  })), 1 /* TEXT */))
}"
`;

exports[`preserve modifier: <div v-t.preserve="'hello'"/> 2`] = `
Object {
  "cached": 0,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 28,
                    "line": 1,
                    "offset": 27,
                  },
                  "source": "v-t.preserve=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
      ],
      "codegenNode": Object {
        "children": Object {
          "content": Object {
            "children": Array [
              Object {
                "content": "_ctx.t('hello', {  }, {  })",
                "isConstant": false,
                "isStatic": false,
                "loc": Object {
                  "end": Object {
                    "column": 28,
                    "line": 1,
                    "offset": 27,
                  },
                  "source": "v-t.preserve=\\"'hello'\\"",
                  "start": Object {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": 4,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": Object {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 8,
          },
          "type": 5,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "loc": Object {
          "end": Object {
            "column": 30,
            "line": 1,
            "offset": 29,
          },
          "source": "<div v-t.preserve=\\"'hello'\\"/>",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "patchFlag": "1 /* TEXT */",
        "props": undefined,
        "tag": "\\"div\\"",
        "type": 13,
      },
      "isSelfClosing": true,
      "loc": Object {
        "end": Object {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "source": "<div v-t.preserve=\\"'hello'\\"/>",
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "ns": 0,
      "props": Array [
        Object {
          "arg": undefined,
          "exp": Object {
            "content": "'hello'",
            "identifiers": Array [],
            "isConstant": true,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
              "source": "'hello'",
              "start": Object {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
            },
            "type": 4,
          },
          "loc": Object {
            "end": Object {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "source": "v-t.preserve=\\"'hello'\\"",
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "modifiers": Array [
            "preserve",
          ],
          "name": "t",
          "type": 7,
        },
      ],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": Object {
    "children": Object {
      "content": Object {
        "children": Array [
          Object {
            "content": "_ctx.t('hello', {  }, {  })",
            "isConstant": false,
            "isStatic": false,
            "loc": Object {
              "end": Object {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
              "source": "v-t.preserve=\\"'hello'\\"",
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": 4,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 8,
      },
      "type": 5,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 1,
        "offset": 29,
      },
      "source": "<div v-t.preserve=\\"'hello'\\"/>",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "patchFlag": "1 /* TEXT */",
    "props": undefined,
    "tag": "\\"div\\"",
    "type": 13,
  },
  "components": Array [],
  "directives": Array [],
  "helpers": Array [
    Symbol(toDisplayString),
    Symbol(createVNode),
    Symbol(openBlock),
    Symbol(createBlock),
  ],
  "hoists": Array [],
  "imports": Array [],
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "source": "<div v-t.preserve=\\"'hello'\\"/>",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "temps": 0,
  "type": 0,
}
`;
